--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.7.9",
     "element-plus": "^2.10.4",
+    "gsap": "^3.13.0",
     "mongodb": "^6.18.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^10.1.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
@@ -37,6 +39,7 @@
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.30.0",
     "pinia": "^2.1.7",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
